# genshin-checkin-bot

./: .env.example  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  DEPLOYMENT-SUMMARY.md  README.md  TODO.md  commitlint.config.js  pyproject.toml  requirements.txt
.bmad-core/: install-manifest.yaml
.github/: COMMIT_CONVENTION.md  UV_QUICKREF.md
.github/workflows/: commit-lint.yml  daily-checkin.yml
.ignore/: prd.md
docs/: BROWSER_FRAMEWORK_EVALUATION.md  BROWSER_FRAMEWORK_GUIDE.md  DEPENDENCY_RESOLUTION.md  DEPLOYMENT-QUICKSTART.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION-UPDATE-2025-11-30.md  TROUBLESHOOTING-GITHUB-ACTIONS.md  architecture.md  brainstorming-session-results.md  brief.md  feasibility-assessment.md  po-validation-report.md  prd.md
docs/architecture/: api-specification.md  coding-standards.md  components.md  core-workflows.md  data-models.md  deployment-architecture.md  development-workflow.md  error-handling-strategy.md  high-level-architecture.md  index.md  introduction.md  monitoring-and-observability.md  security-and-performance.md  tech-stack.md  testing-strategy.md  unified-project-structure.md
docs/prd/: epic-1-foundation-local-proof-of-concept.md  epic-2-core-automation-engine.md  epic-3-cloud-deployment-scheduling.md  epic-4-production-readiness-documentation.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md
docs/qa/gates/: 1.2-project-setup-and-development-environment.yml  1.3-integrated-browser-automation-and-research.yml  1.4-reward-detection-and-claiming-workflow.yml
docs/research/: css-selectors.md  discovered-selectors.md  network-analysis.md
docs/sessions/: 2025-11-21-modal-handling-and-url-fixes.md  2025-11-22-login-automation-and-reward-claiming.md
docs/setup/: MIGRATION_SUMMARY.md  UV_MIGRATION.md
docs/stories/: 1.1.hoyolab-feasibility-validation.md  1.2.project-setup-and-development-environment.md  1.3.integrated-browser-automation-and-research.md  1.4.reward-detection-and-claiming-workflow.md
scripts/: TEST_UV_MIGRATION.sh  verify_dependencies.py
src/: __main__.py
src/automation/: orchestrator.py
src/browser/: manager.py  playwright_impl.py  selenium_impl.py
src/config/: manager.py
src/detection/: detector.py  strategies.py
src/state/: manager.py
src/utils/: exceptions.py  logging_config.py  timing.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_hoyolab_integration.py
tests/unit/: test_browser_manager.py  test_config_manager.py  test_logging_config.py  test_orchestrator.py  test_reward_detector.py  test_state_manager.py
