[project]
name = "genshin-checkin-bot"
version = "0.1.0"
description = "Automated browser-based solution for daily HoYoLAB check-ins with robust error handling"
authors = [
    {name = "SiegfredLorelle", email = ""},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["genshin-impact", "hoyolab", "automation", "browser-automation", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0,<2.0.0",
    "selenium>=4.15.0,<5.0.0",
    "httpx>=0.25.0,<1.0.0",
    "python-decouple>=3.8,<4.0.0",
    "structlog>=23.1.0,<24.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-playwright>=0.4.0,<1.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
]
dev = [
    "black>=23.7.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/SiegfredLorelle/genshin-checkin-bot"
Repository = "https://github.com/SiegfredLorelle/genshin-checkin-bot"
Documentation = "https://github.com/SiegfredLorelle/genshin-checkin-bot/tree/main/docs"
Issues = "https://github.com/SiegfredLorelle/genshin-checkin-bot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
