[project]
name = "genshin-checkin-bot"
version = "0.1.0"
description = "Automated browser-based solution for daily HoYoLAB check-ins with robust error handling"
authors = [
    {name = "SiegfredLorelle", email = ""},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["genshin-impact", "hoyolab", "automation", "browser-automation", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "python-decouple>=3.8,<4.0.0",
    "structlog>=23.1.0,<24.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-playwright>=0.4.0,<1.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/SiegfredLorelle/genshin-checkin-bot"
Repository = "https://github.com/SiegfredLorelle/genshin-checkin-bot"
Documentation = "https://github.com/SiegfredLorelle/genshin-checkin-bot/tree/main/docs"
Issues = "https://github.com/SiegfredLorelle/genshin-checkin-bot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
# Same as black
line-length = 88
target-version = "py311"
# Check src/ and tests/ directories
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I)
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
# Same behavior as isort with black profile
force-single-line = false
force-wrap-aliases = false
split-on-trailing-comma = true

[tool.ruff.format]
# Use double quotes by default (black default)
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0,<4.0.0",
    "ruff>=0.14.10,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
]
